--- a/views/listcolleges.html
+++ b/views/listcolleges.html
@@ -22,113 +22,119 @@
                      </div>
                     <div class="mu-contact-content">           
                         <div class="row">
-                            <div class="col-md-9">
+                            <div class="col-md-8">
                             </div>
-                          <div class="col-md-3">
+                          <div class="col-md-4">
                             <div class="mu-contact-right">
-                              <form class="contactform" method="get" action="/app/showcolleges">                  
+                              <form class="contactform " method="get" action="/app/showcolleges">                  
                                 
-                                <label data-toggle="tooltip" title="Represents your budget">Fee Upper Range</label>
-                                <input type="text"> </input>
-                                
+                                <p><label data-toggle="tooltip" title="Represents your budget">Fee Upper Range</label>
+                                </p><p><input type="text"> </input></p>
+                                <hr class="style1">
+                                <p>
                                 <label data-toggle="tooltip" title="Do you want to avail Bus Facility or Hostel">Bus Facility</label>
                                 	
                                 <div id="BusHostel">
-                                <input type="radio" name="bfhm" value="1">Bus Facility</input>
-                                <input type="radio" name="bfhm" value="2">Hostel</input>
-                                </div>
-                                
+                                <input type="radio" name="bfhm" value="1">  Bus Facility</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="bfhm" value="2" checked="checked">  Hostel</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Describes the rating of the Bus Facility/Hostel Facility">Bus/Hostel Rating</label>
+                                <p><label data-toggle="tooltip" title="Describes the rating of the Bus Facility/Hostel Facility">Bus/Hostel Rating</label>
                                 
                                 <div id="BH Facility">
-                                <input type="radio" name="bhfacility" value="normal">Normal</input>
-                                <input type="radio" name="bhfacility" value="high">High</input>
-                                <input type="radio" name="bhfacility" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="bhfacility" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="bhfacility" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="bhfacility" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 
                                 		
-                                <label data-toggle="tooltip" title="The kind of building qualities and other quality features you want">Infrastructure</label>
+                                <p><label data-toggle="tooltip" title="The kind of building qualities and other quality features you want">Infrastructure</label>
                                 
                                 <div id="Infrastructure">
-                                <input type="radio" name="infra" value="normal">Normal</input>
-                                <input type="radio" name="infra" value="high">High</input>
-                                <input type="radio" name="infra" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="infra" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="infra" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="infra" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Describes your interest in placements">Placements</label>
+                                <p><label data-toggle="tooltip" title="Describes your interest in placements">Placements</label>
                                 
                                 <div id="Placements">
-                                <input type="radio" name="placements" value="normal">Normal</input>
-                                <input type="radio" name="placements" value="high">High</input>
-                                <input type="radio" name="placements" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="placements" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="placements" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="placements" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Describes the level of discipline you want in the college">Discipline</label>
+                                <p><label data-toggle="tooltip" title="Describes the level of discipline you want in the college">Discipline</label>
                                 
                                 <div id="Discipline">
-                                <input type="radio" name="discipline" value="normal">Normal</input>
-                                <input type="radio" name="discipline" value="high">High</input>
-                                <input type="radio" name="discipline" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="discipline" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="discipline" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="discipline" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Describes your interest in club activities">Clubs</label>
+                                <p><label data-toggle="tooltip" title="Describes your interest in club activities">Clubs</label>
                                 
                                 <div id="Clubs">
-                                <input type="radio" name="clubs" value="normal">Normal</input>
-                                <input type="radio" name="clubs" value="high">High</input>
-                                <input type="radio" name="clubs" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="clubs" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="clubs" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="clubs" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 
                                 		
-                                <label data-toggle="tooltip" title="Your choice for good user reviews">User Reviews</label>
+                                <p><label data-toggle="tooltip" title="Your choice for good user reviews">User Reviews</label>
                                 
                                 <div id="User Reviews">
-                                <input type="radio" name="userreviews" value="normal">Normal</input>
-                                <input type="radio" name="userreviews" value="high">High</input>
-                                <input type="radio" name="userreviews" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="userreviews" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="userreviews" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="userreviews" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Accrediations of college e.g. NAAC ACCREDIATION">Affiliations</label>
+                                <p><label data-toggle="tooltip" title="Accrediations of college e.g. NAAC ACCREDIATION">Affiliations</label>
                                 
                                 <div id="Affiliations">
-                                <input type="radio" name="affiliations" value="normal">Normal</input>
-                                <input type="radio" name="affiliations" value="high">High</input>
-                                <input type="radio" name="affiliations" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="affiliations" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="affiliations" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="affiliations" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Describes your choice for syllabus strength">Curricullum</label>
+                                <p><label data-toggle="tooltip" title="Describes your choice for syllabus strength">Curricullum</label>
                                 
                                 <div id="Curricullum">
-                                <input type="radio" name="curricullum" value="normal">Normal</input>
-                                <input type="radio" name="curricullum" value="high">High</input>
-                                <input type="radio" name="curricullum" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="curricullum" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="curricullum" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="curricullum" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Describes whether you want vhigh working hours or normal working hours">Average Duration</label>
+                                <p><label data-toggle="tooltip" title="Describes whether you want vhigh working hours or normal working hours">Average Duration</label>
                                 
                                 <div id="Average Duration">
-                                <input type="radio" name="avgduration" value="normal">Normal</input>
-                                <input type="radio" name="avgduration" value="high">High</input>
-                                <input type="radio" name="avgduration" value="vhigh">Very High</input>
-                                </div>
-                                
+                                <input type="radio" name="avgduration" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="avgduration" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="avgduration" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1">
                                 		
-                                <label data-toggle="tooltip" title="Malls, Restaurants and other utilities around college">College Surroundings</label>
+                                <p><label data-toggle="tooltip" title="Malls, Restaurants and other utilities around college">College Surroundings</label>
                                 
                                 <div id="College Surroundings">
-                                <input type="radio" name="collegesurroundings" value="normal">Normal</input>
-                                <input type="radio" name="collegesurroundings" value="high">High</input>
-                                <input type="radio" name="collegesurroundings" value="vhigh">Very High</input>
-                                </div>       
+                                <input type="radio" name="collegesurroundings" value="normal" checked="checked">    Normal</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="collegesurroundings" value="high">    High</input>&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="collegesurroundings" value="vhigh">    Very High</input>
+                                </div></p>
+                                <hr class="style1"> 
+                                <p class="form-submit">
+                                    <div class="text-right"><input type="submit" value="Send Message" class="mu-post-btn" name="submit"></div>
+                                  </div>
+                                </p>        
                               </form>
                             </div>
                           </div>
