changes for algo

--- a/views/footer.html
+++ b/views/footer.html
@@ -9,11 +9,9 @@
               <div class="mu-footer-widget">
                 <h4>Information</h4>
                 <ul>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="">Features</a></li>
-                  <li><a href="">Course</a></li>
-                  <li><a href="">Event</a></li>
-                  <li><a href="">Sitemap</a></li>
+                  <li><a href="/app/aboutus">About Us</a></li>
+                  <li><a href="#mu-features">Features</a></li>
+                  <li><a href="/app/ourteam">Our Team</a></li>
                   <li><a href="">Term Of Use</a></li>
                 </ul>
               </div>
@@ -24,7 +22,6 @@
                 <ul>
                   <li><a href="">Get Started</a></li>
                   <li><a href="#">My Questions</a></li>
-                  <li><a href="">Download Files</a></li>
                   <li><a href="">Latest Course</a></li>
                   <li><a href="">Academic News</a></li>                  
                 </ul>
@@ -44,10 +41,10 @@
               <div class="mu-footer-widget">
                 <h4>Contact</h4>
                 <address>
-                  <p>P.O. Box 320, Ross, California 9495, USA</p>
-                  <p>Phone: (415) 453-1568 </p>
-                  <p>Website: www.markups.io</p>
-                  <p>Email: info@markups.io</p>
+                  <p>GLA University, Mathura</p>
+                  <p>Phone: +91 9760941715 </p>
+                  <p>Website: www.collegestalkers.com</p>
+                  <p>Email: collegestalkers@gmail.com</p>
                 </address>
               </div>
             </div>
@@ -60,7 +57,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved. Designed by <a href="http://www.markups.io/" rel="nofollow">MarkUps.io</a></p>
+          <p>&copy; All Right Reserved. Designed by <a href="http:// www.collegestalkers.com/" rel="nofollow"> www.collegestalkers.com</a></p>
         </div>
       </div>
     </div>
