--- a/views/home.html
+++ b/views/home.html
@@ -100,7 +100,6 @@
       
   </div>
 
-<body>
     <section id="mu-contact">
         <div class="container">
           <div class="row">
@@ -108,13 +107,25 @@
               <div class="mu-contact-area">
                <!-- start title -->
                <div class="mu-title">
-                 <h2>Find Colleges</h2>
+              <!-- Page breadcrumb -->
+              <section id="mu-page-breadcrumb">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="mu-page-breadcrumb-area">
+                            <h2>Find Colleges</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+                <!-- End breadcrumb -->
                  </div>
                 <div class="mu-contact-content">           
                     <div class="row">
                         <div class="col-md-3">
                         </div>
-                      <div class="col-md-6 bg-primary">
+                      <div class="col-md-6">
                         <div class="mu-contact-left">
                           <form class="contactform" method="get" action="/app/showcolleges">                  
                             <p class="comment-form-author">
@@ -123,8 +134,10 @@
                             </p>
                             <p class="comment-form-email">
                               <label for="colltype">College Type</label>
-                              <p><input type="radio" name="colltype" value="private" id="colltype_0">   Private</p> 
-                                  <p><input type="radio" name="colltype" value="gov" id="colltype_1">   Government</p>           
+                              <p><input type="radio" name="colltype" value="3" id="colltype_0">   Private University</p> 
+                                  <p><input type="radio" name="colltype" value="1" id="colltype_1">   Government University</p>
+                                  <p><input type="radio" name="colltype" value="4" id="colltype_1">   Private College</p>           
+                                  <p><input type="radio" name="colltype" value="2" id="colltype_1">   Government College</p>
                             <p class="form-submit">
                                 <div class="text-right"><input type="submit" value="Send Message" class="mu-post-btn" name="submit"></div>
                               </div>
@@ -141,7 +154,6 @@
             </div>
           </div>
         </section>
-                      <p>This is the home page</p>
 <!-- Start features section -->
 <section id="mu-features">
   <div class="container" >
@@ -150,7 +162,21 @@
         <div class="mu-features-area">
           <!-- Start Title -->
           <div class="mu-title">
-            <h2>Our Features</h2>
+            <!-- Page breadcrumb -->
+            <section id="mu-page-breadcrumb">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="mu-page-breadcrumb-area">
+                          <h2>Our Features</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <!-- End breadcrumb -->
+            
+            
             </div>
           <!-- End Title -->
           <!-- Start features content -->
