--- a/views/ourteam.html
+++ b/views/ourteam.html
@@ -12,7 +12,24 @@
 
       <% include header.html %>
 
- 
+
+<!-- Page breadcrumb -->
+<section id="mu-page-breadcrumb">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="mu-page-breadcrumb-area">
+          <h2>Our Team</h2>
+          <ol class="breadcrumb">
+           <li><a href="/app/home">Home</a></li>            
+           <li class="active">Our Team</li>
+         </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End breadcrumb -->
 <!-- Start our teacher -->
 <section id="mu-our-teacher">
     <div class="container">
@@ -30,7 +47,7 @@
                 <div class="col-lg-3 col-md-3  col-sm-6">
                   <div class="mu-our-teacher-single">
                     <figure class="mu-our-teacher-img">
-                      <img src="\static\scripts\assets\img\teachers\teacher-01.png" alt="teacher img">
+                      <img src="\static\scripts\assets\img\teachers\teacher-01.jpg" height="300" alt="teacher img">
                       <div class="mu-our-teacher-social">
                         <a href="#"><span class="fa fa-facebook"></span></a>
                         <a href="#"><span class="fa fa-twitter"></span></a>
@@ -48,7 +65,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-6">
                   <div class="mu-our-teacher-single">
                     <figure class="mu-our-teacher-img">
-                      <img src="\static\scripts\assets\img\teachers\teacher-02.png" alt="teacher img">
+                      <img src="\static\scripts\assets\img\teachers\teacher-02.jpg" height="300" alt="teacher img">
                       <div class="mu-our-teacher-social">
                         <a href="#"><span class="fa fa-facebook"></span></a>
                         <a href="#"><span class="fa fa-twitter"></span></a>
@@ -66,7 +83,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-6">
                   <div class="mu-our-teacher-single">
                     <figure class="mu-our-teacher-img">
-                      <img src="\static\scripts\assets\img\teachers\teacher-03.png" alt="teacher img">
+                      <img src="\static\scripts\assets\img\teachers\teacher-03.jpg" height="300" alt="teacher img">
                       <div class="mu-our-teacher-social">
                         <a href="#"><span class="fa fa-facebook"></span></a>
                         <a href="#"><span class="fa fa-twitter"></span></a>
@@ -84,7 +101,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-6">
                   <div class="mu-our-teacher-single">
                     <figure class="mu-our-teacher-img">
-                      <img src="\static\scripts\assets\img\teachers\teacher-04.png" alt="teacher img">
+                      <img src="\static\scripts\assets\img\teachers\teacher-04.jpg" height="300" alt="teacher img">
                       <div class="mu-our-teacher-social">
                         <a href="#"><span class="fa fa-facebook"></span></a>
                         <a href="#"><span class="fa fa-twitter"></span></a>
