--- a/views/header.html
+++ b/views/header.html
@@ -57,13 +57,13 @@
         </button>
         <!-- LOGO -->              
         <!-- TEXT BASED LOGO -->
-        <a class="navbar-brand" href="index.html"><img src="\static\scripts\assets\img\LOGO2.png" alt="logo" align="LEFT"><!--<i class="fa fa-university">--></i><span style="line-height:120%">COLLEGE STALKERS</span></a>
+        <a class="navbar-brand" href="/app/home"><img src="\static\scripts\assets\img\LOGO2.png" alt="logo" align="LEFT"><!--<i class="fa fa-university">--></i><span style="line-height:120%">COLLEGE STALKERS</span></a>
         <!-- IMG BASED LOGO  -->
-        <!--<a class="navbar-brand" href="index.html"><img src="\static\scripts\assets\img\LOGO1.png" alt="logo"></a> -->
+        <!--<a class="navbar-brand" href="/app/home"><img src="\static\scripts\assets\img\LOGO1.png" alt="logo"></a> -->
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
-          <li class="active"><a href="index.html">Home</a></li>            
+          <li class="active"><a href="/app/home">Home</a></li>            
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Course <span class="fa fa-angle-down"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -79,8 +79,8 @@
               <li><a href="blog-single.html">Blog Single</a></li>                
             </ul>
           </li>            
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="404.html">404 Page</a></li>               
+          <li><a href="/app/contact">Contact</a></li>
+          <li><a href="/app/ourteam">Our Team</a></li>               
           <li><a href="#" id="mu-search-icon"><i class="fa fa-search"></i></a></li>
         </ul>                     
       </div><!--/.nav-collapse -->        
