--- a/views/listcolleges.html
+++ b/views/listcolleges.html
@@ -159,6 +159,8 @@
                                 <input type="radio" name="collegesurroundings" value="2">    Very High</input>
                                 </div></p>
                                 <hr class="style1"> 
+                                <input type="hidden"  value="<%= loc %>" name="loc" >
+                                <input type="hidden"  value="<%= colltype %>" name="colltype">
                                 <p class="form-submit">
                                     <div class="text-right"><input type="submit" value="Send Message" class="mu-post-btn" name="submit"></div>
                                   </div>
