college detail page

--- a/views/aboutus.html
+++ b/views/aboutus.html
@@ -11,7 +11,23 @@
   <div class="wrapper homePage">
 
       <% include header.html %>
-
+<!-- Page breadcrumb -->
+<section id="mu-page-breadcrumb">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="mu-page-breadcrumb-area">
+          <h2>About Us</h2>
+          <ol class="breadcrumb">
+           <li><a href="/app/home">Home</a></li>            
+           <li class="active">About Us</li>
+         </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End breadcrumb -->
   <!-- Start about us -->
   <section id="mu-about-us">
     <div class="container">
@@ -26,24 +42,22 @@
                     <h2>About Us</h2>              
                   </div>
                   <!-- End Title -->
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum pariatur fuga eveniet soluta aspernatur rem, nam voluptatibus voluptate voluptates sapiente, inventore. Voluptatem, maiores esse molestiae.</p>
-                  <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                    <li>Saepe a minima quod iste libero rerum dicta!</li>
-                    <li>Voluptas obcaecati, iste porro fugit soluta consequuntur. Veritatis?</li>
-                    <li>Ipsam deserunt numquam ad error rem unde, omnis.</li>
-                    <li>Repellat assumenda adipisci pariatur ipsam eos similique, explicabo.</li>
-                  </ul>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quaerat harum facilis excepturi et? Mollitia!</p>
-                </div>
+                  <p>We are all students trying to get some innovative ideas that are required in the forever changing world
+                    here we came accross this idea of collwge comparison and you know that by <b>COLLEGE STALKERS</b>. We
+                    like all other students want to do something out of the box so that it can benefit the users and as the no.
+                    of individuals opting for professional colleges are increasing in India we decided to do something
+                    different. We are still learning and we have used our learning knowledge in this web application and we
+                    hope you will be satisfied after using this web application.</p>
               </div>
+            </div>
               <div class="col-lg-6 col-md-6">
                 <div class="mu-about-us-right">                            
                 <!--<a id="mu-abtus-video" href="https://www.youtube.com/embed/HN3pm9qYAUs" target="mutube-video">-->
-                  <img src="\static\scripts\assets\img\about-us.png" alt="img">
+                  <img src="\static\scripts\assets\img\about-us.png"  alt="img">
                <!-- </a> -->               
                 </div>
               </div>
+            
             </div>
           </div>
         </div>
