--- a/views/home.html
+++ b/views/home.html
@@ -184,27 +184,25 @@
             <div class="row">
               <div class="col-lg-4 col-md-4  col-sm-6">
                 <div class="mu-single-feature">
-                  <span class="fa fa-book"></span>
-                  <h4>Professional Courses</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
-                  
+                  <span class="fa fa-search"></span>
+                  <h4>Search Online</h4>
+                  <p>Choose the filters according to yourself and find the college online. The Website will be effecient to match with your choices.</p>
+                 
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="mu-single-feature">
                   <span class="fa fa-users"></span>
-                  <h4>Best Colleges</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
-                  
-                </div>
+                  <h4>User Ratings</h4>
+              <p>The ratings given by users of the particular colleges are also considered as a small factor as to provide best results.</p>
+            </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="mu-single-feature">
-                  <span class="fa fa-laptop"></span>
-                  <h4>College Comparison</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
-                  
-                </div>
+                  <span class="fa fa-check"></span>
+                  <h4>Scores</h4>
+              <p>Scores will be calculated as per a special algorithm designed particularly for the website which works on best favoured approach.</p>
+           </div>
               </div>
             </div>
           </div>
