--- a/views/header.html
+++ b/views/header.html
@@ -64,7 +64,8 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
           <li class="active"><a href="/app/home">Home</a></li>            
-          <li><a href="/app/contact">Contact</a></li>
+          <li><a href="/app/contact">Contact</a></li>            
+          <li><a href="/app/aboutus">About Us</a></li>
           <li><a href="/app/ourteam">Our Team</a></li>               
           <li><a href="#" id="mu-search-icon"><i class="fa fa-search"></i></a></li>
         </ul>                     
