--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,6 @@
         <span></span>
         <h2>Find Your Desired College</h2>
         <p>Our web site helps you to find the best favoured college for you.</p>
-        <a href="#" class="mu-read-more-btn">Read More</a>
       </div>
     </div>
     <!-- Start single slider item -->
@@ -41,7 +40,6 @@
         <span></span>
         <h2>Comparsion According To Your Needs</h2>
         <p> Choose comparison factors according to yourself.</p>
-        <a href="#" class="mu-read-more-btn">Read More</a>
       </div>
     </div>
     <!-- Start single slider item -->
@@ -57,7 +55,6 @@
         <span></span>
         <h2>Education For Everyone</h2>
         <p>Our aim is to let people find the college with respect to their wish.</p>
-        <a href="#" class="mu-read-more-btn">Read More</a>
       </div>
     </div>
     <!-- Start single slider item -->    
@@ -139,7 +136,8 @@
                                   <p><input type="radio" name="colltype" value="4" id="colltype_1">   Private College</p>           
                                   <p><input type="radio" name="colltype" value="2" id="colltype_1">   Government College</p>
                             <p class="form-submit">
-                                <div class="text-right"><input type="submit" value="Send Message" class="mu-post-btn" name="submit"></div>
+                                <div class="text-right">
+                                    <input type="reset" value="Reset" class="mu-post-btn" name="submit">&nbsp;&nbsp;<input type="submit" value="Find" class="mu-post-btn" name="submit"></div>
                               </div>
                             </p>        
                           </form>
