--- a/views/404.html
+++ b/views/404.html
@@ -4,28 +4,13 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
   <% include commonHeadElements.html %>
-  <title>College Stalkers | About Us</title>
+  <title>College Stalkers | 404</title>
 </head>
 
 <body class="header-fixed header-fixed-space">
   <div class="wrapper homePage">
 
       <% include header.html %>
-<!-- Page breadcrumb -->
-<section id="mu-page-breadcrumb">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="mu-page-breadcrumb-area">
-          <h2>About Us</h2>
-          <ol class="breadcrumb">
-           <li><a href="/app/home">Home</a></li>            
-           <li class="active">About Us</li>
-         </ol>
-        </div>
-      </div>
-    </div>
-  </div>
 <!-- Start error section  -->
 <section id="mu-error">
   <div class="container">
@@ -35,7 +20,7 @@
           <p>Oops! The page you requested was not found!</p>
           <span>The page you are looking for is not available or has been removed or changed.</span>
           <h2>404</h2>
-          <a class="mu-post-btn" href="index.html">GO TO HOME</a>
+          <a class="mu-post-btn" href="/app/home">GO TO HOME</a>
         </div>
       </div>
     </div>
